<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>soft.generators</groupId>
   <artifactId>soft.generators</artifactId>
   <version>1.6.0</version>
   <packaging>pom</packaging>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <repositories>
      <repository>
         <id>central</id>
         <url>https://repo1.maven.org/maven2</url>
      </repository>
      <repository>
         <id>eclipse</id>
         <url>https://repo.eclipse.org/content/repositories/acceleo</url>
      </repository>
      <repository>
         <id>github</id>
         <url>https://maven.pkg.github.com/masagroup/soft.acceleo</url>
      </repository>
   </repositories>
   <pluginRepositories>
      <pluginRepository>
         <id>central</id>
         <url>https://repo1.maven.org/maven2</url>
      </pluginRepository>
      <pluginRepository>
         <id>eclipse</id>
         <url>https://repo.eclipse.org/content/repositories/acceleo</url>
      </pluginRepository>
      <pluginRepository>
         <id>github</id>
         <url>https://maven.pkg.github.com/masagroup/soft.acceleo</url>
      </pluginRepository>
   </pluginRepositories>
   <profiles>
      <profile>
         <id>docker</id>
         <properties>
            <project.target>../../../out/${project.artifactId}</project.target>
            <acceleo.uriHandler>soft.acceleo.AcceleoURIHandler</acceleo.uriHandler>
         </properties>
         <dependencies>
            <dependency>
               <groupId>soft.acceleo</groupId>
               <artifactId>soft.acceleo</artifactId>
               <version>1.0.0</version>
            </dependency>
         </dependencies>
      </profile>
      <profile>
         <id>eclipse</id>
         <activation>
            <activeByDefault>true</activeByDefault>
         </activation>
         <properties>
            <project.target>.target</project.target>
            <acceleo.uriHandler>org.eclipse.acceleo.maven.AcceleoURIHandler</acceleo.uriHandler>
         </properties>
      </profile>
   </profiles>
   <build>
      <directory>${project.target}</directory>
      <sourceDirectory>src</sourceDirectory>
      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
               <source>1.8</source>
               <target>1.8</target>
            </configuration>
         </plugin>
      </plugins>
   </build>
   <modules>
      <module>soft.generator.common</module>
      <module>soft.generator.cpp</module>
      <module>soft.generator.go</module>
      <module>soft.generator.ts</module>
   </modules>
</project>
